# PLM2

./: .env  .gitignore  DEPLOYMENT.md  MODULES.md  NEW_STRUCTURE.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_1_FINAL_SUMMARY.txt  PHASE_1_PROGRESS.md  PHASE_1_REDESIGN_FINAL.md  PHASE_1_REDESIGN_PROGRESS.md  PHASE_1_STATUS.md  PHASE_1_TESTING.md  QUICK_STATUS.txt  README.md
backend/: Dockerfile  alembic.ini  plm.db  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  dependencies.py  main.py
backend/scripts/: backfill_g65_changes.py  backfill_vw426_changes.py  extract_sep_template.py  g65_backfeed_tasklist.py  import_wincarat.py  reset_transactional.py  wincarat.json  wincarat_extract.py
backend/tests/: conftest.py  test_assessment_effort.py  test_assessment_instance_repair.py  test_assessment_ownership.py  test_audit.py  test_audit_action_width.py  test_audit_scoping.py  test_auth.py  test_change_cost.py  test_change_deadline.py  test_change_deviations.py  test_change_gates.py  test_change_kickoff.py  test_change_meetings.py  test_change_org_scoping.py  test_change_routing.py  test_change_scoped_instances.py  test_change_scoping.py  test_change_starter_departments.py  test_changes.py  test_check_workflow_rules.py  test_contacts.py  test_escalations.py  test_impact_confirmation.py  test_impact_tree.py  test_internal_approval.py  test_item_categories.py  test_legacy_retirement.py  test_lessons.py  test_milestones.py  test_my_actions.py  test_naive_utc_datetime.py  test_notifications.py  test_part_bom.py  test_part_hierarchy.py  (+18 more)
(+319 files in other folders)
