[project]
name = "plm-backend"
version = "0.2.0"
description = "Product Lifecycle Management System - Production Ready"
requires-python = ">=3.12"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
strict = true
